--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ asttokens==2.2.1
 attrs==22.2.0
 autobahn==23.1.2
 Automat==22.10.0
+autopep8==2.0.2
 backcall==0.2.0
 beautifulsoup4==4.11.2
 bleach==6.0.0
@@ -20,6 +21,7 @@ comm==0.1.2
 constantly==15.1.0
 crispy-bootstrap4==2022.1
 cryptography==39.0.2
+cssbeautifier==1.14.7
 daphne==4.0.0
 debugpy==1.6.6
 decorator==5.1.1
@@ -33,10 +35,15 @@ django-crispy-forms==2.0
 django-extensions==3.2.1
 django-js-asset==2.0.0
 django_debug_toolbar==3.8.1
+djlint==1.23.3
+EditorConfig==0.12.3
 executing==1.2.0
 fastjsonschema==2.16.3
 fqdn==1.5.1
 ghp-import==2.1.0
+gunicorn==20.1.0
+html-tag-names==0.1.2
+html-void-elements==0.1.0
 hyperlink==21.0.0
 idna==3.4
 importlib-metadata==6.0.0
@@ -49,6 +56,7 @@ ipywidgets==8.0.4
 isoduration==20.11.0
 jedi==0.18.2
 Jinja2==3.1.2
+jsbeautifier==1.14.7
 jsonpointer==2.3
 jsonschema==4.17.3
 jupyter==1.0.0
@@ -60,6 +68,7 @@ jupyter_server==2.4.0
 jupyter_server_terminals==0.4.4
 jupyterlab-pygments==0.2.2
 jupyterlab-widgets==3.0.5
+liqpay-sdk-python3==1.0.3
 Markdown==3.3.7
 MarkupSafe==2.1.2
 matplotlib-inline==0.1.6
@@ -79,6 +88,7 @@ oauthlib==3.2.2
 packaging==23.0
 pandocfilters==1.5.0
 parso==0.8.3
+pathspec==0.11.1
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.4.0
@@ -87,10 +97,12 @@ platformdirs==3.1.1
 prometheus-client==0.16.0
 prompt-toolkit==3.0.38
 psutil==5.9.4
+psycopg2-binary==2.9.6
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycodestyle==2.10.0
 pycparser==2.21
 Pygments==2.14.0
 PyJWT==2.6.0
@@ -106,7 +118,7 @@ pyyaml_env_tag==0.1
 pyzmq==25.0.1
 qtconsole==5.4.1
 QtPy==2.3.0
-regex==2022.10.31
+regex==2023.3.23
 requests==2.28.2
 requests-oauthlib==1.3.1
 rfc3339-validator==0.1.4
@@ -120,7 +132,9 @@ sqlparse==0.4.3
 stack-data==0.6.2
 terminado==0.17.1
 tinycss2==1.2.1
+tomli==2.0.1
 tornado==6.2
+tqdm==4.65.0
 traitlets==5.9.0
 Twisted==22.10.0
 txaio==23.1.1
